--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -1,7 +1,17 @@
 FROM debian:buster
 
-RUN apt-get update -y
-RUN apt-get upgrade -y
+
+RUN apt update -y 
+
+RUN apt install php-fpm php-mysql -y
+
+RUN apt install curl -y
 
 
+# COPY ./tools/script.sh /
+COPY ./tools/wp-config.php /
 
+RUN chmod 777 /script.sh
+
+
+# CMD [ "/script.sh" ]
