--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:buster
 
-RUN apt-get update
+RUN apt-get update -y
 RUN apt-get install -y nginx
 RUN apt-get install openssl -y
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx-selfsigned.key -out /etc/ssl/certs/nginx-selfsigned.crt -subj "/CN=localhost"
@@ -8,9 +8,13 @@ RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private
 
 COPY nginx.conf /etc/nginx/
 
+
+# edit wp-config : db_name, user_name, pwd_of_user
+
+
 EXPOSE 443
 
-COPY nginx.html /var/www/html
+COPY index.html /var/www/html
 
 
 CMD ["nginx", "-g", "daemon off;"]
