--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,10 +3,11 @@ events{
 }
 http{
     server {
+        include /etc/nginx/mime.types;
         listen 443 ssl;
         root /var/www/html;
 
-        index index.html;
+        index index.php;
 
         ssl_protocols TLSv1.3;
         ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
@@ -14,6 +15,16 @@ http{
 
         location / {
             try_files $uri $uri/ =404;
+        }
+
+        location ~ .php$ {
+            try_files $uri =404;
+            fastcgi_split_path_info ^(.+.php)(/.+)$;
+            fastcgi_pass word:9000;
+            fastcgi_index index.php;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param PATH_INFO $fastcgi_path_info;
         }
     }
 }
