--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 // mariadb
-db_name = wp_wordpress
-db_user = matef
-db_pwd = 123
+DB_HOST=maria
+DB_NAME=wp_inception
+DB_USER=matef
+DB_PASSWORD=123
