--- a/srcs/.env
+++ b/srcs/.env
@@ -5,7 +5,7 @@ DB_USER=matef
 DB_PASSWORD=123
 
 # wordpress
-DOMAIN_NAME=localhost
+DOMAIN_NAME=matef.42.fr
 WP_ADMIN=atef
 WP_PASSWORD=p9QI3JtoCv9CL9KgG
 
