--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,20 +1,14 @@
 FROM debian:buster
 
-RUN apt-get update -y
-RUN apt-get install -y nginx
-RUN apt-get install openssl -y
-RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx-selfsigned.key -out /etc/ssl/certs/nginx-selfsigned.crt -subj "/CN=localhost"
+RUN apt-get update -y && apt-get upgrade -y
+RUN apt-get install -y nginx && apt-get install openssl -y
 
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+    -keyout /etc/ssl/private/nginx-selfsigned.key \
+    -out /etc/ssl/certs/nginx-selfsigned.crt \
+    -subj "/CN=matef.42.fr"
 
-COPY nginx.conf /etc/nginx/
-
-
-# edit wp-config : db_name, user_name, pwd_of_user
-
-
-EXPOSE 443
-
-COPY index.html /var/www/html
+COPY ./tools/nginx.conf /etc/nginx/
 
 
 CMD ["nginx", "-g", "daemon off;"]
