--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,9 @@
 # // mariadb
-DB_HOST=maria
+DB_HOST=mariadb
 DB_NAME=wp_inception
 DB_USER=matef
 DB_PASSWORD=123
+DB_ROOT_PASSWORD=123
 
 # wordpress
 DOMAIN_NAME=matef.42.fr
